--- a/src/pages/Register/register.css
+++ b/src/pages/Register/register.css
@@ -8,6 +8,7 @@
     border-radius: 15px;
     padding: 20px;
     align-items: center;
+    min-width: 600px;
 }
 
 .register--selection form {
@@ -25,7 +26,7 @@
     border: none;
     background-color: rgb(203, 252, 203);
     color: black;
-    width: 120%;
+    width: 60%;
 }
 
 .register--selection input[type=password]:focus,
@@ -41,7 +42,7 @@
 }
 
 
-.role--button {
+.register--button {
     color: #FFFFFF;
     background-color: #4CAF50;
     font-size: 15px;
@@ -52,9 +53,10 @@
     margin: 6px;
     cursor: pointer;
     transition: all 0.3s ease;
+    font-weight: bolder;
 }
 
-.role--button:hover {
+.register--button:hover {
     background-color: #FFFFFF;
     color: #4CAF50;
     border: 2px solid #4CAF50;
@@ -69,4 +71,8 @@ body {
 
 .open--paragraph{
     color: white
+}
+
+.register--policy{
+    color: white;
 }
