--- a/src/pages/Role/role.css
+++ b/src/pages/Role/role.css
@@ -23,11 +23,13 @@
     padding: 10px;
     margin-top: 15px;
     border-radius: 15px;
-    width: 70%;
+    width: 80%;
     border: 0px;
     background-color: rgb(183, 221, 243);
     text-decoration: none;
     color: black;
+    padding: 10px;
+    margin: 15px;
 }
 
 .role--bofficer{
@@ -39,7 +41,7 @@
 }
 
 .role--register, .role--register .role--register-button{
-    margin-top: 50px;    
+    margin-top: 20px;    
     font-weight: bolder;
     color: white;
 }
@@ -58,4 +60,21 @@
 }
 
 
+.role--button {
+    color: #FFFFFF;
+    background-color: #4CAF50;
+    font-size: 15px;
+    text-transform: uppercase;
+    padding: 12px 30px;
+    border-radius: 30px;
+    border: none;
+    margin: 6px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
 
+.role--button:hover {
+    background-color: #FFFFFF;
+    color: #4CAF50;
+    border: 2px solid #4CAF50;
+}
